fix: many Exceptions logged if editor underlying resource (re)moved #661